Improves bundling and editor language support.

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,30 +6,30 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.9.6",
-    "@material-ui/core": "^4.10.0",
+    "@babel/standalone": "^7.10.2",
+    "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.54",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/styles": "^4.10.0",
+    "@types/react": "^16.9.35",
     "autosuggest-highlight": "^3.1.1",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "classnames": "^2.2.6",
-    "clsx": "^1.1.0",
+    "clsx": "^1.1.1",
     "deep-diff": "^1.0.2",
-    "firebase": "^7.14.5",
+    "firebase": "^7.14.6",
     "firepad": "^1.5.10",
-    "immutability-helper": "^3.0.2",
+    "immutability-helper": "^3.1.1",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "jsan": "^3.1.13",
     "jscodeshift": "^0.9.0",
     "lodash": "^4.17.15",
     "match-sorter": "^4.1.0",
-    "mdi-material-ui": "^6.15.0",
+    "mdi-material-ui": "^6.16.0",
     "memoize-one": "^5.1.1",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
-    "monaco-jsx-highlighter": "^0.0.13",
+    "monaco-jsx-highlighter": "file:../packages/syntax-highlighter",
     "notistack": "^0.9.16",
     "parse5": "^6.0.0",
     "prop-types": "^15.7.2",
@@ -37,8 +37,8 @@
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dnd": "^11.1.1",
-    "react-dnd-html5-backend": "^11.1.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-grid-layout": "^0.18.3",
     "react-highlight-words": "^0.16.0",
@@ -56,57 +56,27 @@
     "use-resize-observer": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-transform-object-assign": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.10.1",
-    "@babel/register": "7.9.0",
-    "@babel/runtime": "7.9.2",
-    "@types/react": "^16.9.34",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-preval": "^5.0.0",
-    "babel-plugin-react-remove-properties": "^0.3.0",
-    "babel-plugin-transform-dev-warning": "^0.1.1",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-preset-env": "^1.7.0",
-    "bundle-buddy": "^0.2.2",
+    "typescript": "^3.9.3",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.19.0",
-    "react-app-rewired": "^2.1.5",
+    "react-app-rewired": "^2.1.6",
     "react-scripts": "^3.4.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^1.4.0",
     "source-map-explorer": "^2.4.2",
-    "typescript": "^3.8.3"
+    "bundle-buddy": "^0.2.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "start-url": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired start",
-    "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/",
-    "build-monaco-amd": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/ & rm -rf ./build/fireco/monaco-editor/min-maps/",
     "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired --max_old_space_size=4096 build",
-    "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' react-app-rewired --max_old_space_size=4096 build",
+    "start-url": "cross-env PUBLIC_URL='https://seecode.run'& react-app-rewired start",
+    "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build",
+    "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' & react-app-rewired --max_old_space_size=4096 build",
     "analyze-main": "source-map-explorer build/static/js/main.*",
     "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
