--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -60,6 +60,7 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/cli": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.0.1",
     "@storybook/react": "^5.3.19",
     "bundle-buddy": "^0.2.2",
