--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,73 +6,76 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.10.5",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/styles": "^4.10.0",
-    "notistack": "^0.9.17",
-    "@types/react": "^16.9.43",
+    "@babel/standalone": "^7.12.6",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^5.0.0-alpha.16",
+    "@material-ui/icons": "^5.0.0-alpha.15",
+    "@material-ui/lab": "^5.0.0-alpha.16",
+    "@material-ui/styles": "^5.0.0-alpha.15",
+    "@types/react": "^16.9.56",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "deep-diff": "^1.0.2",
-    "firebase": "^7.16.0",
-    "firepad": "^1.5.10",
+    "firebase": "^8.0.2",
+    "firepad": "^1.5.11",
+    "framer-motion": "^2.9.4",
     "immutability-helper": "^3.1.1",
-    "jquery": "^3.5.1",
-    "jquery-ui": "^1.12.1",
     "jsan": "^3.1.13",
-    "jscodeshift": "^0.10.0",
-    "lodash": "^4.17.19",
-    "match-sorter": "^4.2.0",
-    "mdi-material-ui": "^6.16.0",
+    "jscodeshift": "^0.11.0",
+    "lodash": "^4.17.20",
+    "match-sorter": "^5.0.0",
+    "mdi-material-ui": "^6.20.0",
     "memoize-one": "^5.1.1",
-    "monaco-editor": "^0.20.0",
-    "monaco-editor-webpack-plugin": "^1.9.0",
+    "monaco-editor": "^0.21.2",
+    "monaco-editor-webpack-plugin": "^2.0.0",
     "monaco-jsx-highlighter": "file:../packages/syntax-highlighter",
-    "parse5": "^6.0.0",
+    "notistack": "npm:notistack-next@^5.0.0-alpha.9",
+    "parse5": "^6.0.1",
     "prop-types": "^15.7.2",
     "randomcolor": "^0.6.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-autosuggest": "^10.0.2",
+    "react": "^17.0.1",
+    "react-autosuggest": "^10.0.3",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
-    "react-grid-layout": "^0.18.3",
+    "react-dom": "^17.0.1",
+    "react-grid-layout": "^1.2.0",
     "react-highlight-words": "^0.16.0",
-    "react-inspector": "^5.0.1",
-    "react-redux": "^7.2.0",
+    "react-inspector": "^5.1.0",
+    "react-redux": "^7.2.2",
+    "react-resizable": "^1.11.0",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
+    "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.5",
+    "recast": "^0.20.4",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-observable": "^1.2.0",
-    "rxjs": "^6.6.0",
+    "rxjs": "^6.6.3",
     "save": "^2.4.0",
+    "source-map": "^0.7.3",
     "store": "^2.0.12",
-    "use-resize-observer": "^6.1.0"
+    "use-resize-observer": "^7.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/cli": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/preset-create-react-app": "^3.0.1",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/addons": "^6.0.28",
+    "@storybook/cli": "^6.0.28",
+    "@storybook/addon-knobs": "^6.0.28",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.0.28",
     "bundle-buddy": "^0.2.2",
     "cross-env": "^7.0.2",
+    "webpack": "4.42.0",
+    "react-scripts": "^3.4.4",
     "react-app-rewired": "^2.1.6",
-    "react-scripts": "^3.4.1",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-dock-monitor": "^1.2.0",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
-    "redux-devtools-log-monitor": "^1.4.0",
-    "source-map-explorer": "^2.4.2",
-    "typescript": "^3.9.5"
+    "redux-devtools-log-monitor": "^2.1.0",
+    "source-map-explorer": "^2.5.0",
+    "typescript": "^4.2.0-dev.20201118"
   },
   "scripts": {
     "start": "react-app-rewired start",
