[Refactoring] remove unused imports, dead code, standardizes ' for import quotes. [theming] uses well contrasted colors in palette, standardizes colors across styles. Uses REM  over px if possible. [InfinityList] fixes several unnecessary re-renders, throttles/debounces resize events. [TraceList/ConsoleList] fixes default row height style and column layout. [Debug Container] uses Throcing to fix count updates. [BranchNavigator] fixes slider grab loses, uses emotion. [LiveExpression] migrates Tooltip from MUI PopOver to MUI Tooltip. [ObjectExplorer] fixes missing theme context in previews, now uses MUI Tooltips. [TraceToolbar] Add live search example from trace, adds fuzzy search support. [UI] fixes framer-motion 3+ breaking changes. [Pastebin/LiveExpressionStore] fixes performance issues due to excessive re-renders (lots of new unnecessary references).
All npm packages up-to-date.

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,29 +6,30 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.12.10",
-    "@emotion/react": "^11.1.2",
+    "@babel/standalone": "^7.12.12",
+    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-alpha.18",
-    "@material-ui/icons": "^5.0.0-alpha.15",
-    "@material-ui/lab": "^5.0.0-alpha.18",
-    "@material-ui/styles": "^5.0.0-alpha.18",
+    "@material-ui/core": "^5.0.0-alpha.21",
+    "@material-ui/icons": "^5.0.0-alpha.21",
+    "@material-ui/lab": "^5.0.0-alpha.21",
+    "@material-ui/styles": "^5.0.0-alpha.21",
     "@types/react": "^17.0.0",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
     "deep-diff": "^1.0.2",
-    "firebase": "^8.2.0",
+    "firebase": "^8.2.1",
     "firepad": "^1.5.11",
-    "framer-motion": "^2.9.5",
+    "framer-motion": "^3.1.1",
+    "fuse.js": "^6.4.5",
     "immutability-helper": "^3.1.1",
     "jsan": "^3.1.13",
     "jscodeshift": "^0.11.0",
     "lodash": "^4.17.20",
-    "match-sorter": "^6.0.2",
-    "mdi-material-ui": "^6.20.0",
+    "match-sorter": "^6.1.0",
+    "mdi-material-ui": "^6.21.0",
     "memoize-one": "^5.1.1",
     "monaco-editor": "^0.21.2",
-    "monaco-editor-webpack-plugin": "^2.0.0",
+    "monaco-editor-webpack-plugin": "^2.1.0",
     "monaco-jsx-highlighter": "file:../packages/syntax-highlighter",
     "notistack": "npm:notistack-next@^5.0.0-alpha.9",
     "parse5": "^6.0.1",
@@ -43,7 +44,7 @@
     "react-inspector": "^5.1.0",
     "react-redux": "^7.2.2",
     "react-resizable": "^1.11.0",
-    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-virtualized-auto-sizer": "^1.0.3",
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.5",
     "recast": "^0.20.4",
@@ -57,24 +58,23 @@
     "use-resize-observer": "^7.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.8",
-    "@storybook/addon-links": "^6.1.8",
-    "@storybook/addons": "^6.1.8",
-    "@storybook/cli": "^6.1.8",
-    "@storybook/addon-knobs": "^6.1.8",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/addons": "^6.1.11",
+    "@storybook/cli": "^6.1.11",
+    "@storybook/addon-knobs": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.8",
+    "@storybook/react": "^6.1.11",
     "bundle-buddy": "^0.2.2",
-    "cross-env": "^7.0.2",
-    "webpack": "4.42.0",
-    "react-scripts": "^3.4.4",
-    "react-app-rewired": "^2.1.6",
+    "cross-env": "^7.0.3",
+    "react-scripts": "^4.0.1",
+    "react-app-rewired": "^2.1.8",
     "redux-devtools": "^3.7.0",
     "redux-devtools-dock-monitor": "^1.2.0",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^2.1.0",
-    "source-map-explorer": "^2.5.0",
-    "typescript": "^4.2.0-dev.20201127"
+    "source-map-explorer": "^2.5.1",
+    "typescript": "^4.2.0-dev.20210102"
   },
   "scripts": {
     "start": "react-app-rewired start",
