--- a/scr-app/.gitignore
+++ b/scr-app/.gitignore
@@ -19,6 +19,7 @@ src/firebaseDevConfig.js
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
