--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -9,18 +9,18 @@
     "@babel/standalone": "^7.12.12",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-alpha.21",
-    "@material-ui/icons": "^5.0.0-alpha.21",
-    "@material-ui/lab": "^5.0.0-alpha.21",
-    "@material-ui/styles": "^5.0.0-alpha.21",
+    "@material-ui/core": "^5.0.0-alpha.23",
+    "@material-ui/icons": "^5.0.0-alpha.23",
+    "@material-ui/lab": "^5.0.0-alpha.23",
+    "@material-ui/styles": "^5.0.0-alpha.23",
     "@types/react": "^17.0.0",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.6",
     "deep-diff": "^1.0.2",
-    "firebase": "^8.2.1",
+    "firebase": "^8.2.3",
     "firepad": "^1.5.11",
-    "framer-motion": "^3.1.1",
-    "fuse.js": "^6.4.5",
+    "framer-motion": "^3.2.1",
+    "fuse.js": "^6.4.6",
     "immutability-helper": "^3.1.1",
     "jsan": "^3.1.13",
     "jscodeshift": "^0.11.0",
@@ -28,7 +28,7 @@
     "match-sorter": "^6.1.0",
     "mdi-material-ui": "^6.21.0",
     "memoize-one": "^5.1.1",
-    "monaco-editor": "^0.21.2",
+    "monaco-editor": "^0.21.3",
     "monaco-editor-webpack-plugin": "^2.1.0",
     "monaco-jsx-highlighter": "file:../packages/syntax-highlighter",
     "notistack": "npm:notistack-next@^5.0.0-alpha.9",
@@ -41,10 +41,10 @@
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
     "react-highlight-words": "^0.16.0",
-    "react-inspector": "^5.1.0",
+    "react-inspector": "file:../packages/react-inspector",
     "react-redux": "^7.2.2",
     "react-resizable": "^1.11.0",
-    "react-virtualized-auto-sizer": "^1.0.3",
+    "react-virtualized-auto-sizer": "^1.0.4",
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.5",
     "recast": "^0.20.4",
@@ -58,13 +58,13 @@
     "use-resize-observer": "^7.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/addons": "^6.1.11",
-    "@storybook/cli": "^6.1.11",
-    "@storybook/addon-knobs": "^6.1.11",
+    "@storybook/addon-actions": "^6.2.0-alpha.16",
+    "@storybook/addon-links": "^6.2.0-alpha.16",
+    "@storybook/addons": "^6.2.0-alpha.16",
+    "@storybook/cli": "^6.2.0-alpha.16",
+    "@storybook/addon-knobs": "^6.2.0-alpha.16",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.11",
+    "@storybook/react": "^6.2.0-alpha.16",
     "bundle-buddy": "^0.2.2",
     "cross-env": "^7.0.3",
     "react-scripts": "^4.0.1",
@@ -73,8 +73,8 @@
     "redux-devtools-dock-monitor": "^1.2.0",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^2.1.0",
-    "source-map-explorer": "^2.5.1",
-    "typescript": "^4.2.0-dev.20210102"
+    "source-map-explorer": "^2.5.2",
+    "typescript": "^4.2.0-dev.20210115"
   },
   "scripts": {
     "start": "react-app-rewired start",
