--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,88 +6,99 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.12.12",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-alpha.23",
-    "@material-ui/icons": "^5.0.0-alpha.23",
-    "@material-ui/lab": "^5.0.0-alpha.23",
-    "@material-ui/styles": "^5.0.0-alpha.23",
-    "@types/react": "^17.0.0",
+    "@babel/generator": "^7.14.5",
+    "@babel/parser": "^7.14.7",
+    "@babel/standalone": "^7.14.7",
+    "@babel/traverse": "^7.14.7",
+    "@babel/types": "^7.14.5",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-alpha.38",
+    "@material-ui/icons": "^5.0.0-alpha.37",
+    "@material-ui/lab": "^5.0.0-alpha.38",
+    "@material-ui/styles": "^5.0.0-alpha.36",
+    "@types/react": "^17.0.11",
     "autosuggest-highlight": "^3.1.1",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "deep-diff": "^1.0.2",
-    "firebase": "^8.2.3",
+    "firebase": "^8.6.8",
     "firepad": "^1.5.11",
-    "framer-motion": "^3.2.1",
+    "framer-motion": "^4.1.17",
     "fuse.js": "^6.4.6",
+    "hoist-non-react-statics": "^3.3.2",
     "immutability-helper": "^3.1.1",
     "jsan": "^3.1.13",
-    "jscodeshift": "^0.11.0",
-    "lodash": "^4.17.20",
-    "match-sorter": "^6.1.0",
-    "mdi-material-ui": "^6.21.0",
-    "memoize-one": "^5.1.1",
-    "monaco-editor": "^0.21.3",
-    "monaco-editor-webpack-plugin": "^2.1.0",
-    "monaco-jsx-highlighter": "file:../packages/syntax-highlighter",
-    "notistack": "npm:notistack-next@^5.0.0-alpha.9",
+    "jscodeshift": "^0.12.0",
+    "lodash": "^4.17.21",
+    "match-sorter": "^6.3.0",
+    "mdi-material-ui": "^7.0.0",
+    "memoize-one": "^5.2.1",
+    "monaco-editor": "^0.25.2",
+    "monaco-editor-webpack-plugin": "^4.0.0",
+    "monaco-jsx-highlighter": "../packages/syntax-highlighter",
+    "notistack": "^2.0.1-alpha.4",
     "parse5": "^6.0.1",
     "prop-types": "^15.7.2",
-    "randomcolor": "^0.6.2",
-    "react": "^17.0.1",
-    "react-autosuggest": "^10.0.4",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^17.0.1",
-    "react-grid-layout": "^1.2.0",
-    "react-highlight-words": "^0.16.0",
-    "react-inspector": "file:../packages/react-inspector",
-    "react-redux": "^7.2.2",
-    "react-resizable": "^1.11.0",
-    "react-virtualized-auto-sizer": "^1.0.4",
+    "react": "^17.0.2",
+    "react-autosuggest": "^10.1.0",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "^17.0.2",
+    "react-grid-layout": "^1.2.4",
+    "react-highlight-words": "^0.17.0",
+    "react-inspector": "../packages/react-inspector",
+    "react-redux": "^7.2.4",
+    "react-resizable": "^1.11.1",
+    "react-virtualized-auto-sizer": "^1.0.5",
     "react-window": "^1.8.6",
-    "react-window-infinite-loader": "^1.0.5",
+    "react-window-infinite-loader": "^1.0.7",
     "recast": "^0.20.4",
-    "redux": "^4.0.5",
+    "redux": "^4.1.0",
     "redux-actions": "^2.6.5",
     "redux-observable": "^1.2.0",
-    "rxjs": "^6.6.3",
+    "rxjs": "^6.6.7",
     "save": "^2.4.0",
-    "source-map": "^0.7.3",
     "store": "^2.0.12",
     "use-resize-observer": "^7.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.2.0-alpha.16",
-    "@storybook/addon-links": "^6.2.0-alpha.16",
-    "@storybook/addons": "^6.2.0-alpha.16",
-    "@storybook/cli": "^6.2.0-alpha.16",
-    "@storybook/addon-knobs": "^6.2.0-alpha.16",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.2.0-alpha.16",
+    "@monaco-editor/react": "^4.2.1",
+    "@redux-devtools/core": "^3.9.0",
+    "@redux-devtools/dock-monitor": "^1.4.0",
+    "@redux-devtools/log-monitor": "^2.3.0",
+    "@redux-devtools/slider-monitor": "^2.0.0-8",
+    "@storybook/addon-actions": "^6.3.1",
+    "@storybook/addon-knobs": "^6.3.0",
+    "@storybook/addon-links": "^6.3.1",
+    "@storybook/addons": "^6.3.1",
+    "@storybook/cli": "^6.3.1",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.3.1",
     "bundle-buddy": "^0.2.2",
     "cross-env": "^7.0.3",
-    "react-scripts": "^4.0.1",
     "react-app-rewired": "^2.1.8",
-    "redux-devtools": "^3.7.0",
-    "redux-devtools-dock-monitor": "^1.2.0",
-    "redux-devtools-filterable-log-monitor": "^0.8.1",
-    "redux-devtools-log-monitor": "^2.1.0",
+    "react-scripts": "^4.0.3",
+    "react-test-renderer": "^17.0.2",
+    "source-map": "^0.8.0-beta.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.2.0-dev.20210115"
+    "typescript": "^4.3.4"
+  },
+  "resolutions": {
+    "react-scripts/eslint-webpack-plugin": "2.4.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired --max_old_space_size=4096 build",
+    "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build",
     "start-url": "cross-env PUBLIC_URL='https://seecode.run'& react-app-rewired start",
     "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build",
-    "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' & react-app-rewired --max_old_space_size=4096 build",
+    "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' & react-app-rewired build",
     "analyze-main": "source-map-explorer build/static/js/main.*",
     "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
-    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "test": "react-app-rewired test --env=jsdom  --transformIgnorePatterns \"node_modules/(?!your-module-name)/\"",
+    "test-updatesnapshot": "npm run test -- --update-snapshot",
+    "test-watch": "npm run test -- --watch"
   },
   "browserslist": {
     "production": [
@@ -102,7 +113,7 @@
     ]
   },
   "engines": {
-    "node": "10",
-    "npm": "6"
+    "node": ">=10",
+    "npm": ">=7"
   }
 }
