--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,73 +6,74 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/generator": "^7.14.5",
-    "@babel/parser": "^7.14.7",
-    "@babel/standalone": "^7.14.7",
-    "@babel/traverse": "^7.14.7",
-    "@babel/types": "^7.14.5",
-    "@emotion/react": "^11.4.0",
+    "@babel/generator": "^7.15.8",
+    "@babel/parser": "^7.15.8",
+    "@babel/standalone": "^7.15.8",
+    "@babel/traverse": "^7.15.4",
+    "@babel/types": "^7.15.6",
+    "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-alpha.38",
-    "@material-ui/icons": "^5.0.0-alpha.37",
-    "@material-ui/lab": "^5.0.0-alpha.38",
-    "@material-ui/styles": "^5.0.0-alpha.36",
-    "@types/react": "^17.0.11",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.0.4",
+    "@mui/styles": "^5.0.1",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@types/react": "^17.0.30",
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.3.1",
     "deep-diff": "^1.0.2",
-    "firebase": "^8.6.8",
+    "firebase": "^8.10.0",
     "firepad": "^1.5.11",
     "framer-motion": "^4.1.17",
     "fuse.js": "^6.4.6",
     "hoist-non-react-statics": "^3.3.2",
     "immutability-helper": "^3.1.1",
     "jsan": "^3.1.13",
-    "jscodeshift": "^0.12.0",
     "lodash": "^4.17.21",
-    "match-sorter": "^6.3.0",
+    "match-sorter": "^6.3.1",
     "mdi-material-ui": "^7.0.0",
     "memoize-one": "^5.2.1",
-    "monaco-editor": "^0.25.2",
-    "monaco-editor-webpack-plugin": "^4.0.0",
+    "monaco-editor": "^0.29.1",
+    "monaco-editor-webpack-plugin": "^5.0.0",
     "monaco-jsx-highlighter": "../packages/syntax-highlighter",
-    "notistack": "^2.0.1-alpha.4",
+    "notistack": "^2.0.2",
     "parse5": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
-    "react-copy-to-clipboard": "^5.0.3",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
-    "react-grid-layout": "^1.2.4",
+    "react-grid-layout": "^1.3.0",
     "react-highlight-words": "^0.17.0",
     "react-inspector": "../packages/react-inspector",
-    "react-redux": "^7.2.4",
-    "react-resizable": "^1.11.1",
-    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-redux": "^7.2.5",
+    "react-resizable": "^3.0.4",
+    "react-resize-detector": "^6.7.6",
+    "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.7",
-    "recast": "^0.20.4",
-    "redux": "^4.1.0",
+    "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
-    "redux-observable": "^1.2.0",
-    "rxjs": "^6.6.7",
+    "redux-observable": "^2.0.0",
+    "rxjs": "^7.4.0",
     "save": "^2.4.0",
     "store": "^2.0.12",
-    "use-resize-observer": "^7.0.0"
+    "use-immer": "^0.6.0"
   },
   "devDependencies": {
-    "@monaco-editor/react": "^4.2.1",
+    "@monaco-editor/react": "^4.3.1",
     "@redux-devtools/core": "^3.9.0",
     "@redux-devtools/dock-monitor": "^1.4.0",
     "@redux-devtools/log-monitor": "^2.3.0",
     "@redux-devtools/slider-monitor": "^2.0.0-8",
-    "@storybook/addon-actions": "^6.3.1",
-    "@storybook/addon-knobs": "^6.3.0",
-    "@storybook/addon-links": "^6.3.1",
-    "@storybook/addons": "^6.3.1",
-    "@storybook/cli": "^6.3.1",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.3.1",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-controls": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/addons": "^6.3.8",
+    "@storybook/cli": "^6.3.8",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.8",
     "bundle-buddy": "^0.2.2",
     "cross-env": "^7.0.3",
     "react-app-rewired": "^2.1.8",
@@ -80,7 +81,7 @@
     "react-test-renderer": "^17.0.2",
     "source-map": "^0.8.0-beta.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.3.4"
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "react-scripts/eslint-webpack-plugin": "2.4.1"
