--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for seeCode.run: adds, copies and authenticate pastebins",
+  "description": "Cloud Functions for seeCode.run: add, copy and authenticate pastebins",
+  "private": true,
   "scripts": {
     "serve": "cross-env NODE_ENV=development & firebase use development & firebase serve --only functions",
     "serve-prod": "cross-env NODE_ENV=production & firebase use production & firebase serve --only functions",
@@ -12,17 +13,18 @@
     "logs-dev": "cross-env NODE_ENV=development & firebase use development & firebase functions:log"
   },
   "dependencies": {
-    "firebase": "^8.2.7",
-    "firebase-admin": "^9.5.0",
-    "firebase-functions": "^3.13.1",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.7.0",
+    "firebase-functions": "^4.3.1",
     "firepad": "^1.5.11"
   },
-  "private": true,
   "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
+    "firebase-functions-test": "^3.0.0",
     "cross-env": "^7.0.3"
   },
   "engines": {
-    "node": ">=10",
-    "npm": ">=7"
+    "node": "16"
   }
 }
