--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,85 +6,93 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/generator": "^7.15.8",
-    "@babel/parser": "^7.15.8",
-    "@babel/standalone": "^7.15.8",
-    "@babel/traverse": "^7.15.4",
-    "@babel/types": "^7.15.6",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.38",
-    "@mui/icons-material": "^5.0.4",
-    "@mui/lab": "^5.0.0-alpha.48",
-    "@mui/material": "^5.0.4",
-    "@mui/styles": "^5.0.1",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@types/react": "^17.0.30",
-    "autosuggest-highlight": "^3.1.1",
+    "@babel/generator": "^7.x",
+    "@babel/parser": "^7.x",
+    "@babel/standalone": "^7.x",
+    "@babel/traverse": "^7.x",
+    "@babel/types": "^7.x",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/lab": "^5.0.0-alpha.119",
+    "@mui/material": "^5.11.9",
+    "@mui/joy": "^5.0.0-alpha.67",
+    "@mui/styles": "^5.11.9",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@types/react": "^18.0.5",
+    "autosuggest-highlight": "^3.2.1",
     "classnames": "^2.3.1",
     "deep-diff": "^1.0.2",
     "firebase": "^8.10.0",
     "firepad": "^1.5.11",
-    "framer-motion": "^4.1.17",
-    "fuse.js": "^6.4.6",
+    "framer-motion": "^6.3.0",
+    "fuse.js": "^6.5.3",
     "hoist-non-react-statics": "^3.3.2",
     "immutability-helper": "^3.1.1",
-    "jsan": "^3.1.13",
+    "memoize-one": "^6.0.0",
+    "jsan": "^3.1.14",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
-    "mdi-material-ui": "^7.0.0",
-    "memoize-one": "^5.2.1",
-    "monaco-editor": "^0.29.1",
-    "monaco-editor-webpack-plugin": "^5.0.0",
-    "monaco-jsx-highlighter": "../packages/syntax-highlighter",
-    "notistack": "^2.0.2",
+    "mdi-material-ui": "^7.5.0",
+    "monaco-editor": "^0.38.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-jsx-highlighter": "^2.0.4",
+    "notistack": "^2.0.4",
     "parse5": "^6.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "postcss": "8.4.21",
+    "postcss-preset-env": "8.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^17.0.2",
-    "react-grid-layout": "^1.3.0",
+    "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-highlight-words": "^0.17.0",
     "react-inspector": "../packages/react-inspector",
-    "react-redux": "^7.2.5",
+    "react-redux": "^8.0.2",
     "react-resizable": "^3.0.4",
-    "react-resize-detector": "^6.7.6",
+    "react-resize-detector": "^7.1.2",
     "react-virtualized-auto-sizer": "^1.0.6",
-    "react-window": "^1.8.6",
-    "react-window-infinite-loader": "^1.0.7",
-    "redux": "^4.1.1",
+    "react-window": "^1.8.7",
+    "react-window-infinite-loader": "^1.0.8",
+    "redux": "^5.0.0-alpha.0",
     "redux-actions": "^2.6.5",
     "redux-observable": "^2.0.0",
-    "rxjs": "^7.4.0",
-    "save": "^2.4.0",
+    "rxjs": "^7.5.6",
+    "save": "^2.5.0",
     "store": "^2.0.12",
-    "use-immer": "^0.6.0"
+    "use-immer": "^0.7.0",
+    "nanoid": "^3.3.6",
+    "picocolors": "^1.0.0",
+    "source-map-js": "^1.0.2",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
-    "@monaco-editor/react": "^4.3.1",
-    "@redux-devtools/core": "^3.9.0",
-    "@redux-devtools/dock-monitor": "^1.4.0",
-    "@redux-devtools/log-monitor": "^2.3.0",
-    "@redux-devtools/slider-monitor": "^2.0.0-8",
-    "@storybook/addon-actions": "^6.3.8",
-    "@storybook/addon-controls": "^6.3.8",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/addons": "^6.3.8",
-    "@storybook/cli": "^6.3.8",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.8",
-    "bundle-buddy": "^0.2.2",
+    "@monaco-editor/react": "^4.4.5",
+    "@redux-devtools/core": "^3.10.1",
+    "@redux-devtools/dock-monitor": "^2.0.1",
+    "@redux-devtools/log-monitor": "^3.0.1",
+    "@redux-devtools/slider-monitor": "^3.0.2",
+    "@storybook/addon-docs": "^6.5.13",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-controls": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/addons": "^6.5.13",
+    "@storybook/builder-webpack5": "^6.5.13",
+    "@storybook/cli": "^6.5.13",
+    "@storybook/manager-webpack5": "^6.5.13",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.13",
     "cross-env": "^7.0.3",
-    "react-app-rewired": "^2.1.8",
-    "react-scripts": "^4.0.3",
-    "react-test-renderer": "^17.0.2",
+    "logrocket": "^2.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^18.0.0",
     "source-map": "^0.8.0-beta.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.4.4"
-  },
-  "resolutions": {
-    "react-scripts/eslint-webpack-plugin": "2.4.1"
+    "styled-components": "^5.3.3",
+    "typescript": "^4.8.2",
+    "webpack": "^5.69.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -93,10 +101,9 @@
     "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build",
     "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' & react-app-rewired build",
     "analyze-main": "source-map-explorer build/static/js/main.*",
-    "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public",
+    "storybook": "start-storybook -p 9009",
+    "build-storybook": "build-storybook",
     "test": "react-app-rewired test --env=jsdom  --transformIgnorePatterns \"node_modules/(?!your-module-name)/\"",
     "test-updatesnapshot": "npm run test -- --update-snapshot",
     "test-watch": "npm run test -- --watch"
@@ -114,7 +121,6 @@
     ]
   },
   "engines": {
-    "node": ">=10",
-    "npm": ">=7"
+    "node": "^10 || ^12 || >=14"
   }
 }
