--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -1,31 +1,30 @@
 {
   "name": "scr-app",
-  "version": "0.1.1",
+  "version": "0.7.7",
   "private": true,
   "sideEffects": false,
-  "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/generator": "^7.x",
-    "@babel/parser": "^7.x",
-    "@babel/standalone": "^7.x",
-    "@babel/traverse": "^7.x",
-    "@babel/types": "^7.x",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/lab": "^5.0.0-alpha.119",
-    "@mui/material": "^5.11.9",
-    "@mui/joy": "^5.0.0-alpha.67",
-    "@mui/styles": "^5.11.9",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@types/react": "^18.0.5",
-    "autosuggest-highlight": "^3.2.1",
-    "classnames": "^2.3.1",
+    "@babel/generator": "^7.22.3",
+    "@babel/parser": "^7.22.4",
+    "@babel/standalone": "^7.22.4",
+    "@babel/traverse": "^7.22.4",
+    "@babel/types": "^7.22.4",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.133",
+    "@mui/material": "^5.13.4",
+    "@mui/joy": "^5.0.0-alpha.83",
+    "@mui/styles": "^5.13.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react": "^18.2.8",
+    "autosuggest-highlight": "^3.3.4",
+    "classnames": "^2.3.2",
     "deep-diff": "^1.0.2",
-    "firebase": "^8.10.0",
+    "firebase": "^8.10.1",
     "firepad": "^1.5.11",
-    "framer-motion": "^6.3.0",
+    "framer-motion": "^6.5.1",
     "fuse.js": "^6.5.3",
     "hoist-non-react-statics": "^3.3.2",
     "immutability-helper": "^3.1.1",
@@ -33,29 +32,29 @@
     "jsan": "^3.1.14",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
-    "mdi-material-ui": "^7.5.0",
-    "monaco-editor": "^0.38.0",
+    "mdi-material-ui": "^7.7.0",
+    "monaco-editor": "^0.40.0-dev.20230701",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "monaco-jsx-highlighter": "^2.0.4",
     "notistack": "^2.0.4",
-    "parse5": "^6.0.1",
-    "postcss": "8.4.21",
+    "parse5": "^7.1.2",
+    "postcss": "^8.4.24",
     "postcss-preset-env": "8.0.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "0.0.0-experimental-fc801116c-20230629",
     "react-autosuggest": "^10.1.0",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "0.0.0-experimental-fc801116c-20230629",
     "react-grid-layout": "^1.3.4",
     "react-highlight-words": "^0.17.0",
-    "react-inspector": "../packages/react-inspector",
+    "react-inspector": "npm:react-inspector-plus@^6.0.1",
     "react-redux": "^8.0.2",
     "react-resizable": "^3.0.4",
-    "react-resize-detector": "^7.1.2",
+    "react-resize-detector": "^9.1.0",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
     "react-window-infinite-loader": "^1.0.8",
-    "redux": "^5.0.0-alpha.0",
+    "redux": "^5.0.0-beta.0",
     "redux-actions": "^2.6.5",
     "redux-observable": "^2.0.0",
     "rxjs": "^7.5.6",
@@ -65,14 +64,15 @@
     "nanoid": "^3.3.6",
     "picocolors": "^1.0.0",
     "source-map-js": "^1.0.2",
-    "vm-browserify": "^1.1.2"
+    "vm-browserify": "^1.1.2",
+    "query-string": "^8.1.0"
   },
   "devDependencies": {
     "@monaco-editor/react": "^4.4.5",
-    "@redux-devtools/core": "^3.10.1",
-    "@redux-devtools/dock-monitor": "^2.0.1",
-    "@redux-devtools/log-monitor": "^3.0.1",
-    "@redux-devtools/slider-monitor": "^3.0.2",
+    "@redux-devtools/core": "^3.13.1",
+    "@redux-devtools/dock-monitor": "^3.0.1",
+    "@redux-devtools/log-monitor": "^4.0.2",
+    "@redux-devtools/slider-monitor": "^4.0.1",
     "@storybook/addon-docs": "^6.5.13",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-controls": "^6.5.13",
@@ -88,15 +88,16 @@
     "react-app-rewired": "^2.2.1",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.0.0",
-    "source-map": "^0.8.0-beta.0",
+    "source-map": "^0.7.4",
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.3",
-    "typescript": "^4.8.2",
-    "webpack": "^5.69.1"
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1",
+    "react-devtools-inline": "^4.27.8"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build",
+    "start": "cross-env NODE_OPTIONS=--max_old_space_size=8000 react-app-rewired start",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=10000 PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build",
     "start-url": "cross-env PUBLIC_URL='https://seecode.run'& react-app-rewired start",
     "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build",
     "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' & react-app-rewired build",
