--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -5,18 +5,18 @@
   "sideEffects": false,
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/generator": "^7.22.3",
-    "@babel/parser": "^7.22.4",
-    "@babel/standalone": "^7.22.4",
-    "@babel/traverse": "^7.22.4",
-    "@babel/types": "^7.22.4",
-    "@emotion/react": "^11.11.0",
+    "@babel/generator": "^7.22.7",
+    "@babel/parser": "^7.22.7",
+    "@babel/standalone": "^7.22.8",
+    "@babel/traverse": "^7.22.8",
+    "@babel/types": "^7.22.5",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.133",
-    "@mui/material": "^5.13.4",
-    "@mui/joy": "^5.0.0-alpha.83",
-    "@mui/styles": "^5.13.2",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/lab": "^5.0.0-alpha.135",
+    "@mui/material": "^5.13.7",
+    "@mui/joy": "^5.0.0-alpha.86",
+    "@mui/styles": "^5.13.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "^18.2.8",
     "autosuggest-highlight": "^3.3.4",
@@ -33,7 +33,7 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "mdi-material-ui": "^7.7.0",
-    "monaco-editor": "^0.40.0-dev.20230701",
+    "monaco-editor": "^0.40.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "monaco-jsx-highlighter": "^2.0.4",
     "notistack": "^2.0.4",
@@ -41,10 +41,10 @@
     "postcss": "^8.4.24",
     "postcss-preset-env": "8.0.1",
     "prop-types": "^15.8.1",
-    "react": "0.0.0-experimental-fc801116c-20230629",
+    "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "0.0.0-experimental-fc801116c-20230629",
+    "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-highlight-words": "^0.17.0",
     "react-inspector": "npm:react-inspector-plus@^6.0.1",
@@ -68,6 +68,7 @@
     "query-string": "^8.1.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@monaco-editor/react": "^4.4.5",
     "@redux-devtools/core": "^3.13.1",
     "@redux-devtools/dock-monitor": "^3.0.1",
@@ -96,8 +97,8 @@
     "react-devtools-inline": "^4.27.8"
   },
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--max_old_space_size=8000 react-app-rewired start",
-    "build": "cross-env NODE_OPTIONS=--max_old_space_size=10000 PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build",
+    "start": "cross-env NODE_OPTIONS=--max_old_space_size=12000 react-app-rewired start  --verbose",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=12000 PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build  --verbose",
     "start-url": "cross-env PUBLIC_URL='https://seecode.run'& react-app-rewired start",
     "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build",
     "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' & react-app-rewired build",
