Idiomatic Views support tutorable =P

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -5,11 +5,11 @@
   "sideEffects": false,
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/generator": "^7.22.10",
-    "@babel/parser": "^7.22.10",
-    "@babel/standalone": "^7.22.10",
-    "@babel/traverse": "^7.22.10",
-    "@babel/types": "^7.22.10",
+    "@babel/generator": "7.22.10",
+    "@babel/parser": "7.22.10",
+    "@babel/standalone": "7.22.10",
+    "@babel/traverse": "7.22.10",
+    "@babel/types": "7.22.10",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
@@ -33,7 +33,7 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "mdi-material-ui": "^7.7.0",
-    "monaco-editor": "^0.41.0",
+    "monaco-editor": "^0.45.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "monaco-jsx-highlighter": "^2.0.4",
     "notistack": "^2.0.8",
@@ -60,12 +60,13 @@
     "rxjs": "^7.8.1",
     "save": "^2.9.0",
     "store": "^2.0.12",
+    "wgxpath": "^1.2.0",
+    "html2canvas": "^1.4.1",
+    "immer": "^10.0.3",
     "use-immer": "^0.9.0",
-    "nanoid": "^3.3.6",
-    "picocolors": "^1.0.0",
-    "source-map-js": "^1.0.2",
-    "vm-browserify": "^1.1.2",
-    "query-string": "^8.1.0"
+    "uuid": "^9.0.1",
+    "react-markdown": "^9.0.1",
+    "react-draggable": "^4.4.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -91,10 +92,20 @@
     "react-test-renderer": "^18.2.0",
     "source-map": "^0.7.4",
     "source-map-explorer": "^2.5.3",
+    "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.11",
-    "typescript": "^5.1.6",
-    "webpack": "^5.88.2",
-    "react-devtools-inline": "^4.28.0"
+    "typescript": "^5.3.3",
+    "@types/node":"^20.11.0",
+    "@types/react":"^18.2.47",
+    "@types/react-dom":"^18.2.18",
+    "@types/jest": "^29.5.11",
+    "webpack": "^5.89.0",
+    "react-devtools-inline": "^4.28.0",
+    "use-immer": "^0.9.0",
+    "nanoid": "^3.3.6",
+    "picocolors": "^1.0.0",
+    "source-map-js": "^1.0.2",
+    "vm-browserify": "^1.1.2"
   },
   "scripts": {
     "start": "cross-env NODE_OPTIONS='--max_old_space_size=12000 --max_semi_space_size=256 --v8-pool-size=0' UV_THREADPOOL_SIZE=10 BROWSER=none react-app-rewired start",
