Fixes compat errors with Monaco 0.40xx Adds general icon conceptualizations Add timer config at top navigation. moves logic to pastebin rather than editor moves chat to right top panel disable chat and about info for experiment Adds system general state EALE: Errors on ALE, adds SCR Error as dynamic runtime type resolver: JS HTMLCollection iterator 100% match Adds Monaco Editor OS cross-compatibility: fixes breaking sync when code created in macOS is used by Guin2 users, breaking Transactional Operation as Firepad buffers edit operations (Error: retain expects a positive integer., pushEdit() invalid, and trying line 2 before line 1 push ). It is 2024, and this is still an issue!
Disables navigation info in live logs
Add Resize on requestanimationframe hook
Monaco: Moves deltadecorations to model sue rather that deprecated editor api
Disable experimental Idiomata features

Adds jspm resolution of imports and iframe preparation
Fixes persistence context path sync

Separates and conciliates JS and React events via RxJS.

TSX support and future type enforced codebase.
Test code base init

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 package-lock.json
 .firebaserc
 .vscode/
-.idea/
+.idea/*
+!.idea/rcb-settings.xml
 .DS_Store
 .env.development.local
 .env.test.local
