--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -22,7 +22,7 @@
     "autosuggest-highlight": "^3.3.4",
     "classnames": "^2.3.2",
     "deep-diff": "^1.0.2",
-    "firebase": "^10.1.0",
+    "firebase": "^10.8.0",
     "firepad": "^1.5.11",
     "framer-motion": "^10.15.1",
     "fuse.js": "^6.6.2",
@@ -33,9 +33,9 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "mdi-material-ui": "^7.7.0",
-    "monaco-editor": "^0.45.0",
+    "monaco-editor": "0.45.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
-    "monaco-jsx-highlighter": "^2.0.4",
+    "monaco-jsx-highlighter": "^2.77.77",
     "notistack": "^2.0.8",
     "parse5": "^7.1.2",
     "postcss": "^8.4.27",
@@ -54,10 +54,10 @@
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9",
     "react-window-infinite-loader": "^1.0.9",
-    "redux": "^5.0.0-beta.0",
-    "redux-actions": "^2.6.5",
-    "redux-observable": "^2.0.0",
-    "rxjs": "^7.8.1",
+    "redux": "^5.0.1",
+    "redux-actions": "^3.0.0",
+    "redux-observable": "^3.0.0-rc.2",
+    "rxjs": "^8.0.0-alpha.14",
     "save": "^2.9.0",
     "store": "^2.0.12",
     "wgxpath": "^1.2.0",
@@ -66,7 +66,11 @@
     "use-immer": "^0.9.0",
     "uuid": "^9.0.1",
     "react-markdown": "^9.0.1",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "@jspm/generator": "^2.0.0",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "cssstyle": "^4.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -95,9 +99,9 @@
     "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.11",
     "typescript": "^5.3.3",
-    "@types/node":"^20.11.0",
-    "@types/react":"^18.2.47",
-    "@types/react-dom":"^18.2.18",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "@types/jest": "^29.5.11",
     "webpack": "^5.89.0",
     "react-devtools-inline": "^4.28.0",
@@ -105,7 +109,11 @@
     "nanoid": "^3.3.6",
     "picocolors": "^1.0.0",
     "source-map-js": "^1.0.2",
-    "vm-browserify": "^1.1.2"
+    "vm-browserify": "^1.1.2",
+    "@testing-library/react": "^14.1.2",
+    "web-vitals": "^3.5.1",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-mui": "^5.0.1"
   },
   "scripts": {
     "start": "cross-env NODE_OPTIONS='--max_old_space_size=12000 --max_semi_space_size=256 --v8-pool-size=0' UV_THREADPOOL_SIZE=10 BROWSER=none react-app-rewired start",
